2008-02-27  Sriram Neelakandan  <sriram.neelakandan@gmail.com>

Reviewed, tweaked and landed by ap.

        http://bugs.webkit.org/show_bug.cgi?id=17487
        HTMLInput mysteriously fails to work if ICU dat file is missing

        * platform/text/TextBreakIteratorICU.cpp: (WebCore::setUpIterator): Assert that the iterator
        has been opened.



git-svn-id: svn://svn.chromium.org/blink/trunk@30624 bbb929c8-8fbe-4397-9dbb-9b2b20218538