third_party/WebKit/WebCore/platform/text/TextBreakIteratorICU.cpp
@@ -26,6 +26,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "TextBreakIteratorInternalICU.h"
 
 #include <unicode/ubrk.h>
+#include <wtf/Assertions.h>
 
 namespace WebCore {
 
@@ -39,6 +40,7 @@ static TextBreakIterator* setUpIterator(bool& createdIterator, TextBreakIterator
         UErrorCode openStatus = U_ZERO_ERROR;
         iterator = static_cast<TextBreakIterator*>(ubrk_open(type, currentTextBreakLocaleID(), 0, 0, &openStatus));
         createdIterator = true;
+        ASSERT_WITH_MESSAGE(U_SUCCESS(openStatus), "ICU could not open a break iterator: %s (%d)", u_errorName(openStatus), openStatus);
     }
     if (!iterator)
         return 0;
